add some more settings and explanations to config

--- a/src/sortingshop/settings/config.ini
+++ b/src/sortingshop/settings/config.ini
@@ -4,5 +4,12 @@ rename_files = true
 rename_scheme = IMG_%Y-%m-%d_%H-%M-%S%%+.3nc.%%le
 
 [METADATA]
-prune_metadata = true
-always_create_sidecar = true
+; automatically create a sidecar MEDIAFILE.EXTENSION.xmp and write to sidecar instead
+use_sidecar = true
+; remove unwanted tags from the mediafile, especially when creating sidecars so theres little chance of discrepancy between the two
+prune = true
+; when pruning (see above) store following tags in memory and write to file / sidecar afterwards
+; see https://exiftool.org/TagNames/index.html for an overview of the tags
+mandatory = lr:hierarchicalSubjects,xmp:Rating,xmp:DateTimeOriginal
+; prune (see above) the following tags
+remove = IPTC,XMP,IFD0:Copyright,IFD0:Artist,IFD0:ProcessingSoftware,IFD0:Software,IFD0:Rating,IFD0:RatingPercent,ExifIFD:UserComment,File:Comment,IFD0:ImageDescription
