add detection of naming scheme

--- a/src/sortingshop/settings/config.ini
+++ b/src/sortingshop/settings/config.ini
@@ -1,7 +1,15 @@
 [RENAMING]
 rename_files = true
 ; scheme must be compatible with exiftool
+; see https://exiftool.org/filename.html
 rename_scheme = IMG_%Y-%m-%d_%H-%M-%S%%+.3nc.%%le
+; regex for python to detect if a file is named appropriatly
+; all variables supported by strftime may be used, special fields like %%c or
+; %%e that are not recognised by strftime should be marked as a variable (.)
+; for example in the rename scheme above
+;  - %%+.3nc results in a three-digit counter preceded by "_": "_XXX"
+;  - %%le results in a lower-case extension
+detect_scheme = IMG_%Y-%m-%d_%H-%M-%S_.{3}\.[a-z]+
 
 [METADATA]
 ; automatically create a sidecar MEDIAFILE.EXTENSION.xmp and write to sidecar instead
