store exiftool rename commands in config.ini

--- a/src/sortingshop/settings/config.ini
+++ b/src/sortingshop/settings/config.ini
@@ -1,8 +1,8 @@
 [RENAMING]
 rename_files = true
-; scheme must be compatible with exiftool
+; must be compatible with exiftool
 ; see https://exiftool.org/filename.html
-rename_scheme = IMG_%Y-%m-%d_%H-%M-%S%%+.3nc.%%le
+rename_command = -d IMG_%Y-%m-%d_%H-%M-%S%%+.3nc.%%le -filename<FileModifyDate -filename<ModifyDate -filename<CreateDate -filename<DateTimeOriginal -v
 ; regex for python to detect if a file is named appropriatly
 ; all variables supported by strftime may be used, special fields like %%c or
 ; %%e that are not recognised by strftime should be marked as a variable (.)
@@ -16,7 +16,7 @@ detect_scheme = IMG_%Y-%m-%d_%H-%M-%S_.{3}\.[a-z]+
 use_sidecar = true
 ; remove unwanted tags from the mediafile, especially when creating sidecars so theres little chance of discrepancy between the two
 prune = true
-; when pruning (see above) store following tags in memory and write to file / sidecar afterwards
+; when pruning (see above) store the following tags in memory and write to file / sidecar afterwards
 ; see https://exiftool.org/TagNames/index.html for an overview of the tags
 mandatory = lr:hierarchicalSubjects,xmp:Rating,xmp:DateTimeOriginal
 ; prune (see above) the following tags
