restructure config, introduce file preparation (rename, prune, ...)

--- a/src/sortingshop/settings/config.ini
+++ b/src/sortingshop/settings/config.ini
@@ -1,4 +1,7 @@
-[RENAMING]
+[Paths]
+working_dir = /data/eike/Code/Test/Bilder
+
+[Renaming]
 rename_files = true
 ; must be compatible with exiftool
 ; see https://exiftool.org/filename.html
@@ -11,13 +14,18 @@ rename_command = -d IMG_%Y-%m-%d_%H-%M-%S%%+.3nc.%%le -filename<FileModifyDate -
 ;  - %%le results in a lower-case extension
 detect_scheme = IMG_%Y-%m-%d_%H-%M-%S_.{3}\.[a-z]+
 
-[METADATA]
+[Metadata]
 ; automatically create a sidecar MEDIAFILE.EXTENSION.xmp and write to sidecar instead
 use_sidecar = true
+; assume a file is prepared if
+; - it has a sidecar if it needs one (use_sidecar) and
+; - it is name correctly (detect_scheme) if it needs to (rename_files)
+; else do renaming nonetheless and attempt to create a sidecar
+soft_check = true
 ; remove unwanted tags from the mediafile, especially when creating sidecars so theres little chance of discrepancy between the two
-prune = true
+prune_metadata = true
 ; when pruning (see above) store the following tags in memory and write to file / sidecar afterwards
-; see https://exiftool.org/TagNames/index.html for an overview of the tags
-mandatory = lr:hierarchicalSubjects,xmp:Rating,xmp:DateTimeOriginal
-; prune (see above) the following tags
-remove = IPTC,XMP,IFD0:Copyright,IFD0:Artist,IFD0:ProcessingSoftware,IFD0:Software,IFD0:Rating,IFD0:RatingPercent,ExifIFD:UserComment,File:Comment,IFD0:ImageDescription
+; see https://exiftool.org/TagNames/index.html for an overview of the tags (whitespace delimited)
+mandatory_metadata = lr:hierarchicalSubjects xmp:Rating xmp:DateTimeOriginal
+; prune (see above) the following tags (whitespace delimited)
+remove_metadata = IPTC XMP IFD0:Copyright IFD0:Artist IFD0:ProcessingSoftware IFD0:Software IFD0:Rating IFD0:RatingPercent ExifIFD:UserComment File:Comment IFD0:ImageDescription
