--- a/src/sortingshop/settings/config.ini
+++ b/src/sortingshop/settings/config.ini
@@ -15,6 +15,8 @@ rename_command = -d IMG_%Y-%m-%d_%H-%M-%S%%+.3nc.%%le -filename<FileModifyDate -
 detect_scheme = IMG_%Y-%m-%d_%H-%M-%S_.{3}\.[a-z]+
 
 [Metadata]
+; field to store tags:
+field_tags = hierarchicalSubject
 ; automatically create a sidecar MEDIAFILE.EXTENSION.xmp and write to sidecar instead
 use_sidecar = true
 ; assume a file is prepared if
