multiple fixes, rotate image

--- a/src/sortingshop/settings/config.ini
+++ b/src/sortingshop/settings/config.ini
@@ -21,13 +21,13 @@ field_tags = hierarchicalSubject
 use_sidecar = true
 ; assume a file is prepared if
 ; - it has a sidecar if it needs one (use_sidecar) and
-; - it is name correctly (detect_scheme) if it needs to (rename_files)
+; - it is named correctly (detect_scheme) if it needs to (rename_files)
 ; else do renaming nonetheless and attempt to create a sidecar
 soft_check = true
 ; remove unwanted tags from the mediafile, especially when creating sidecars so theres little chance of discrepancy between the two
 prune_metadata = true
 ; when pruning (see above) store the following tags in memory and write to file / sidecar afterwards
 ; see https://exiftool.org/TagNames/index.html for an overview of the tags (whitespace delimited)
-mandatory_metadata = lr:hierarchicalSubjects xmp:Rating xmp:DateTimeOriginal
+mandatory_metadata = lr:hierarchicalSubjects xmp:Rating DateTimeOriginal
 ; prune (see above) the following tags (whitespace delimited)
 remove_metadata = IPTC XMP IFD0:Copyright IFD0:Artist IFD0:ProcessingSoftware IFD0:Software IFD0:Rating IFD0:RatingPercent ExifIFD:UserComment File:Comment IFD0:ImageDescription
