make image size in UI configurable

--- a/src/sortingshop/settings/config.ini
+++ b/src/sortingshop/settings/config.ini
@@ -1,6 +1,10 @@
 [Paths]
 working_dir = /data/eike/Code/Test/Bilder
 
+[UI]
+; maximal dimension of the displayed image in px
+image_max_size = 600
+
 [Renaming]
 rename_files = true
 ; must be compatible with exiftool
