make metadata control height configurable

--- a/src/sortingshop/settings/config.ini
+++ b/src/sortingshop/settings/config.ini
@@ -4,6 +4,8 @@ working_dir = /data/eike/Code/Test/Bilder
 [UI]
 ; maximal dimension of the displayed image in px
 image_max_size = 600
+; the height of the metadata field in px
+metadata_field_size_vertical = 300
 
 [Renaming]
 rename_files = true
