--- a/src/sortingshop/settings/config.ini
+++ b/src/sortingshop/settings/config.ini
@@ -22,7 +22,7 @@ detect_scheme = IMG_%Y-%m-%d_%H-%M-%S_.{3}\.[a-z]+
 
 [Metadata]
 ; field to store tags:
-field_tags = hierarchicalSubject
+field_tags = HierarchicalSubject
 ; automatically create a sidecar MEDIAFILE.EXTENSION.xmp and write to sidecar instead
 use_sidecar = true
 ; assume a file is prepared if
