clarified description of "prune" in settings.ini

--- a/src/sortingshop/settings/config.ini
+++ b/src/sortingshop/settings/config.ini
@@ -32,7 +32,7 @@ use_sidecar = true
 soft_check = true
 ; remove unwanted tags from the mediafile, especially when creating sidecars so theres little chance of discrepancy between the two
 prune_metadata = true
-; when pruning (see above) store the following tags in memory and write to file / sidecar afterwards
+; when pruning (see above) write the following tags to file / sidecar
 ; see https://exiftool.org/TagNames/index.html for an overview of the tags (whitespace delimited)
 mandatory_metadata = lr:hierarchicalSubjects xmp:Rating DateTimeOriginal
 ; prune (see above) the following tags (whitespace delimited)
