add functionality to expand abbreviations into tags

--- a/src/sortingshop/settings/config.ini
+++ b/src/sortingshop/settings/config.ini
@@ -1,5 +1,6 @@
 [Paths]
 working_dir = /data/eike/Code/Test/Bilder
+path_tagsets = ~/.config/SortingShop/tagsets
 
 [UI]
 ; maximal dimension of the displayed image in px
