add ability to sort mediafiles based on tags

--- a/src/sortingshop/settings/config.ini
+++ b/src/sortingshop/settings/config.ini
@@ -38,3 +38,23 @@ prune_metadata = true
 mandatory_metadata = lr:hierarchicalSubjects xmp:Rating DateTimeOriginal
 ; prune (see above) the following tags (whitespace delimited)
 remove_metadata = IPTC XMP IFD0:Copyright IFD0:Artist IFD0:ProcessingSoftware IFD0:Software IFD0:Rating IFD0:RatingPercent ExifIFD:UserComment File:Comment IFD0:ImageDescription
+
+[Sorting]
+; tags are used for sorting
+; the regex should match the part of the tag to sort by and is used in re.sub()
+; the following regex catches a part of a tag that is formatted like:
+; TAG1|YYYY DESCRIPTION
+;      ^^^^^^^^^^^^^^^^
+; e.g.
+; TAG1|2020 My Greatest Pictures
+;      ^^^^^^^^^^^^^^^^^^^^^^^^^
+sorting_tag_regex = .*([0-9]{4} [^\/\\]+).*
+; replace the tag with only the matched part
+; e.g.
+; TAG1|2020 My Greatest Pictures
+;      ^^^^^^^^^^^^^^^^^^^^^^^^^
+; becomes:
+; 2020 My Greatest Pictures
+; ^^^^^^^^^^^^^^^^^^^^^^^^^
+; and is used for sorting
+sorting_tag_sub = \g<1>
