refactor to make to allow for default tags

--- a/src/sortingshop/settings/config.ini
+++ b/src/sortingshop/settings/config.ini
@@ -1,5 +1,5 @@
 [Paths]
-working_dir = 
+working_dir =
 path_tagsets = ~/.config/SortingShop/tagsets
 
 [UI]
@@ -38,6 +38,8 @@ prune_metadata = true
 mandatory_metadata = lr:hierarchicalSubjects xmp:Rating DateTimeOriginal
 ; prune (see above) the following tags (whitespace delimited)
 remove_metadata = IPTC XMP IFD0:Copyright IFD0:Artist IFD0:ProcessingSoftware IFD0:Software IFD0:Rating IFD0:RatingPercent ExifIFD:UserComment File:Comment IFD0:ImageDescription
+; apply a default tagset by default
+apply_default_tagset = false
 
 [Sorting]
 ; tags are used for sorting
