make renaming more secure

--- a/src/sortingshop/settings/config.ini
+++ b/src/sortingshop/settings/config.ini
@@ -17,9 +17,16 @@ rename_command = -d IMG_%Y-%m-%d_%H-%M-%S%%+.3nc.%%le -filename<FileModifyDate -
 ; all variables supported by strftime may be used, special fields like %%c or
 ; %%e that are not recognised by strftime should be marked as a variable (.)
 ; for example in the rename scheme above
-;  - %%+.3nc results in a three-digit counter preceded by "_": "_XXX"
+;  - %%+.3nc results in a three-digit counter preceded by "_": "_XXX" (see counter_length and mediafile_name_has_counter)
 ;  - %%le results in a lower-case extension
 detect_scheme = IMG_%Y-%m-%d_%H-%M-%S_.{3}\.[a-z]+
+; in case of duplicate filenames a counter is placed before the extension
+; e.g., IMG_2021-01-01_00-00-01.jpg exists, and another file that would be renamed to have the same name
+; would become IMG_2021-01-01_00-00-01_001.jpg
+; this option sets the number of digits of that counter
+counter_length = 3
+; the default naming scheme above already has a counter incorporated in its naming rule
+mediafile_name_has_counter = true
 
 [Metadata]
 ; field to store tags:
