add missing dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,13 +14,15 @@ classifiers =
   Programming Language :: Python :: 3.6
 
 [options]
-packages = sortingshop,
+packages = sortingshop
 package_dir =
   = src
 setup_requires =
   docutils>=0.3
   wheel
   setuptools_scm
+install_requires =
+  wxPython>=4.0
 
 [options.entry_points]
 console_scripts =
