--- a/src/sortingshop/settings/config.ini
+++ b/src/sortingshop/settings/config.ini
@@ -1,5 +1,7 @@
 [Paths]
+; if you want to start with the same directory every time enter it here
 working_dir =
+; your global tagsets reside here
 path_tagsets = ~/.config/sortingshop/tagsets
 
 [UI]
