--- a/src/sortingshop/settings/config.ini
+++ b/src/sortingshop/settings/config.ini
@@ -46,6 +46,21 @@ prune_metadata = true
 ; see https://exiftool.org/TagNames/index.html for an overview of the tags (whitespace delimited)
 mandatory_metadata = lr:hierarchicalSubjects xmp:Rating DateTimeOriginal
 ; prune (see above) the following tags (whitespace delimited)
+; corresponds to
+; exiftool \
+;   -overwrite_original \
+;   -IPTC= \
+;   -XMP= \
+;   -IFD0:Copyright= \
+;   -IFD0:Artist= \
+;   -IFD0:ProcessingSoftware= \
+;   -IFD0:Software= \
+;   -IFD0:Rating= \
+;   -IFD0:RatingPercent= \
+;   -ExifIFD:UserComment= \
+;   -File:Comment= \
+;   -IFD0:ImageDescription= \
+;   -m \
 remove_metadata = IPTC XMP IFD0:Copyright IFD0:Artist IFD0:ProcessingSoftware IFD0:Software IFD0:Rating IFD0:RatingPercent ExifIFD:UserComment File:Comment IFD0:ImageDescription
 ; apply a default tagset by default
 apply_default_tagset = false
