--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 # pyproject.toml
 [build-system]
-requires = ["setuptools>=30.3.0", "wheel", "setuptools_scm"]
+requires = ["setuptools>=45", "wheel", "docutils>=0.3"]
